--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,7 @@ InitTestScene*.unity*
 
 # Auto-generated scenes by play mode tests
 /[Aa]ssets/[Ii]nit[Tt]est[Ss]cene*.unity*
+
+# User-specific files
+*.md
+!/README.md
